--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
           <img src="./static/images/efficient_training.png" alt="SFPO algorithm" style="width:100%;max-width:100%;height:auto;display:block;margin:0 auto;">
         </figure>
          <figure class="algorithm">
-          <img src="./static/images/efficiency_results.png" alt="SFPO algorithm" style="width:60%;max-width:100%;height:auto;display:block;margin:0 auto;">
+          <img src="./static/images/efficiency_results.png" alt="SFPO algorithm" style="width:50%;max-width:100%;height:auto;display:block;margin:0 auto;">
         </figure>
       </div>
     </div>
@@ -365,15 +365,15 @@
 
 <footer class="footer">
   <div class="container">
-    <div class="content has-text-centered">
-      <a class="icon-link"
+    <!-- <div class="content has-text-centered">
+      <!-- <a class="icon-link"
          href="./static/videos/nerfies_paper.pdf">
         <i class="fas fa-file-pdf"></i>
-      </a>
-      <a class="icon-link" href="https://github.com/keunhong" class="external-link" disabled>
+      </a> -->
+      <!-- <a class="icon-link" href="https://github.com/keunhong" class="external-link" disabled>
         <i class="fab fa-github"></i>
-      </a>
-    </div>
+      </a> -->
+    </div> -->
     <div class="columns is-centered">
       <div class="column is-8">
         <div class="content">
