--- a/index.html
+++ b/index.html
@@ -281,17 +281,20 @@
     </div>
 </section>
 
-<!-- <section class="section" id="BibTeX">
+<section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
-  journal   = {ICCV},
-  year      = {2021},
+    <pre><code>@misc{wang2025slowfastpolicyoptimizationrepositionbeforeupdate,
+      title={Slow-Fast Policy Optimization: Reposition-Before-Update for LLM Reasoning}, 
+      author={Ziyan Wang and Zheng Wang and Jie Fu and Xingwei Qu and Qi Cheng and Shengpu Tang and Minjia Zhang and Xiaoming Huo},
+      year={2025},
+      eprint={2510.04072},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2510.04072}, 
 }</code></pre>
   </div>
-</section> -->
+</section>
 
 
 <footer class="footer">
